arreglo de punto 4 del tp3