@@ -1,20 +1,23 @@
 package ar.edu.unlp.info.oo2.tp3_ej4;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class Puntaje implements Sugerencia{
 
 	@Override
-	public ArrayList<Pelicula> sugerir(List<Pelicula> grilla) {
-		Collections.sort(grilla, new PuntajeComparable());
-        Collections.reverse(grilla);
-        return (ArrayList<Pelicula>) grilla
-        		.stream()
-        		.limit(3)
-        		.collect(Collectors.toList());
+	public List<Pelicula> sugerir(Decodificador d) {
+		List<Pelicula> noVistas = d.getGrillaEmpresa()
+				.stream()
+				.filter(p -> !(d.getConocidas().contains(p)))
+				.toList();
+		
+        return noVistas.stream()
+				.sorted(Comparator.comparing(Pelicula::getPuntaje).reversed()
+				.thenComparing(Comparator.comparing(Pelicula::getAñoEstreno).reversed()))
+				.limit(3)
+				.collect(Collectors.toList());
         }
 
 }
